--- a/cs7637-project2/.classpath
+++ b/cs7637-project2/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry kind="src" path="resources"/>
 	<classpathentry kind="src" path="project1"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
+	<classpathentry kind="lib" path="lib/ABAGAIL.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
